[package]
name = "audiobook_tts"
description = "A library for generating audiobooks using the Coqui-TTS system."
version = "1.1.1"
edition = "2021"
license = "EUPL-1.2"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.18.1", features = ["auto-initialize"] }
